# polyominoes

./: App.hs  LICENSE  Polyomino.cabal  Polyomino.hs  README.md  stack.yaml
src/: Main.hs  Polyomino.hs
